{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 331,
  "lineage": "6c2fe59c-9e28-bec3-adf9-3be3f46cb8d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0864d119ed167f081",
            "domain": "vpc",
            "id": "eipalloc-028542e18cfd7153f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c93a94dd73ba173b",
            "private_dns": "ip-10-0-0-172.ec2.internal",
            "private_ip": "10.0.0.172",
            "public_dns": "ec2-52-4-93-119.compute-1.amazonaws.com",
            "public_ip": "52.4.93.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0403da384f91f2f51",
            "domain": "vpc",
            "id": "eipalloc-014fc681fc7cfd5b7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0564113f0ddad2b3b",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-54-147-105-169.compute-1.amazonaws.com",
            "public_ip": "54.147.105.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-0f9e3d3a0b015d626",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9e3d3a0b015d626",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00112fd8e00dd6ab8",
            "private_dns": "ip-172-31-31-150.ec2.internal",
            "private_ip": "172.31.31.150",
            "public_dns": "ec2-3-91-191-52.compute-1.amazonaws.com",
            "public_ip": "3.91.191.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0287c7406656e16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-mp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-88351cc5",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cfa8869550850df5"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-mp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-09d26f6fef9e49457",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d26f6fef9e49457",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e671548adfc9a202",
            "private_dns": "ip-172-31-28-46.ec2.internal",
            "private_ip": "172.31.28.46",
            "public_dns": "ec2-54-92-193-156.compute-1.amazonaws.com",
            "public_ip": "54.92.193.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4be2eb9a51590a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-mp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-88351cc5",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cfa8869550850df5"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-mp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-02748b0939c673cb3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02748b0939c673cb3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0401699d20f4834be",
            "private_dns": "ip-172-31-27-106.ec2.internal",
            "private_ip": "172.31.27.106",
            "public_dns": "ec2-35-173-128-174.compute-1.amazonaws.com",
            "public_ip": "35.173.128.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6b9314be9bedd3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-mp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-88351cc5",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cfa8869550850df5"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-mp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:internet-gateway/igw-086fbf2b799fe3432",
            "id": "igw-086fbf2b799fe3432",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028542e18cfd7153f",
            "id": "nat-0000b897516583efa",
            "network_interface_id": "eni-0c93a94dd73ba173b",
            "private_ip": "10.0.0.172",
            "public_ip": "52.4.93.119",
            "subnet_id": "subnet-04060435253ce1ce6",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014fc681fc7cfd5b7",
            "id": "nat-07ecea20d40403b7f",
            "network_interface_id": "eni-0564113f0ddad2b3b",
            "private_ip": "10.0.1.98",
            "public_ip": "54.147.105.169",
            "subnet_id": "subnet-017d3a86beb6d92a5",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-07a13eac2e4a6f16d",
            "id": "rtb-07a13eac2e4a6f16d",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0000b897516583efa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-04a40c271ef0a9d3a",
            "id": "rtb-04a40c271ef0a9d3a",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ecea20d40403b7f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-08f41a3a6f7baa859",
            "id": "rtb-08f41a3a6f7baa859",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086fbf2b799fe3432",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aff049cfb332f69",
            "route_table_id": "rtb-07a13eac2e4a6f16d",
            "subnet_id": "subnet-0de19eaf5516cc5c8"
          },
          "dependencies": [
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0a6d70397bf6d3",
            "route_table_id": "rtb-04a40c271ef0a9d3a",
            "subnet_id": "subnet-0f96818afcd7a8cf7"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_app_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bdcb31e015ad471",
            "route_table_id": "rtb-07a13eac2e4a6f16d",
            "subnet_id": "subnet-0fec8aa766f413a30"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a",
            "aws_subnet.private_db_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa12dc472b3d42bc",
            "route_table_id": "rtb-04a40c271ef0a9d3a",
            "subnet_id": "subnet-088adf4e87dd5aec9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_db_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc",
            "aws_eip.nat2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8cd15da475cf1e3",
            "route_table_id": "rtb-08f41a3a6f7baa859",
            "subnet_id": "subnet-04060435253ce1ce6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.router_public",
            "aws_subnet.public_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fd5ef347292fa51",
            "route_table_id": "rtb-08f41a3a6f7baa859",
            "subnet_id": "subnet-017d3a86beb6d92a5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.router_public",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-mp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-0cfa8869550850df5",
            "description": "acesso-ssh-mp",
            "egress": [],
            "id": "sg-0cfa8869550850df5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/21"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-mp",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-5d268c20"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0de19eaf5516cc5c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0de19eaf5516cc5c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0f96818afcd7a8cf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0f96818afcd7a8cf7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0fec8aa766f413a30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0fec8aa766f413a30",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-088adf4e87dd5aec9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-088adf4e87dd5aec9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-04060435253ce1ce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04060435253ce1ce6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-017d3a86beb6d92a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-017d3a86beb6d92a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-02e5ee690b9fe3938"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:vpc/vpc-02e5ee690b9fe3938",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0d570043cd0aec8db",
            "default_route_table_id": "rtb-0d1f82a6b372d6483",
            "default_security_group_id": "sg-0127d670f6f4fbfe6",
            "dhcp_options_id": "dopt-02d28578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02e5ee690b9fe3938",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1f82a6b372d6483",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          }
        }
      ]
    }
  ]
}